Remove .cache and screenshots from git tracking
These were accidentally committed and add ~35MB to the repo.
Added to .gitignore to prevent future commits.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ Thumbs.db
 *_SceneCollection.json
 *_ShowController.csv
 *_recording_session.json
+
+# Cache directories
+.cache/
+
+# Screenshots (test artifacts)
+screenshots/
+ralph-wigg/screenshots/
